--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,11 @@
 /* } */
 
 .title {
-    text-align-last: center;
+    text-align: center;
     font-style: italic;
-}
+    color: #333; /* Example color */
+    font-size: 24px; /* Example font size */
+  }
 
 .loaderContainer {
     display: flex;
