--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
     align-items: center;
 }
 
+/* loader */
 .loader {
     width: 45px;
     aspect-ratio: 1;
@@ -51,5 +52,6 @@
 
     100% {
         background-size: 20% 100%, 20% 100%, 20% 100%
-    }
+    }    
 }
+/* fine loader */
