--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,84 @@
-/* HTML: <div class="loader"></div> */
+body {
+    background: repeating-linear-gradient(45deg, black, #000000a3 75rem);
+    color: whitesmoke;
+}
 
-/* body .loader  {
+.headerContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Opzionale: per occupare tutta l'altezza del viewport */
-/* } */
+    flex-direction: row;
+    justify-content: space-between;
+}
 
-.title {
-    text-align: center;
-    font-style: italic;
-    color: #333; /* Example color */
-    font-size: 24px; /* Example font size */
-  }
+.titleName {
+    text-align: left;
+    text-transform: capitalize;
+    color: cadetblue;
+    font-size: 2.2rem;
+    font-family: serif, Arial, Helvetica, sans-serif;
+    margin: .5rem 0 0 1rem;
+    display: inline-block;
+}
 
-.loaderContainer {
+.menuNav {
+    display: inline;
+}
+
+.menuUl {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    list-style: none;
+    margin-top: 0.5rem;
+    padding: 0;
+    float: right;
 }
 
-/* loader */
-.loader {
-    width: 45px;
-    aspect-ratio: 1;
-    --c: no-repeat linear-gradient(#000 0 0);
-    background:
-        var(--c) 0% 50%,
-        var(--c) 50% 50%,
-        var(--c) 100% 50%;
-    background-size: 20% 100%;
-    animation: l1 1s infinite linear;
+.menuItem {
+    font-size: 1.2rem;
+    /* margin: 0 10px; */
+    margin-right: 1rem;
+    padding: 10px;
+    color: whitesmoke;
 }
 
-@keyframes l1 {
-    0% {
-        background-size: 20% 100%, 20% 100%, 20% 100%
-    }
-
-    33% {
-        background-size: 20% 10%, 20% 100%, 20% 100%
-    }
-
-    50% {
-        background-size: 20% 100%, 20% 10%, 20% 100%
-    }
-
-    66% {
-        background-size: 20% 100%, 20% 100%, 20% 10%
-    }
-
-    100% {
-        background-size: 20% 100%, 20% 100%, 20% 100%
-    }    
+.menuItem:hover {
+    border-bottom: 1px solid cadetblue;
+    opacity: 0.7;
+    transition: opacity 0.3s ease-in-out;
+    color: cadetblue;
+    font-weight: bold;
 }
-/* fine loader */
+
+.menuItem a {
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.menuItem a:hover {
+    color: cadetblue;
+}
+
+.presentingPortolio {
+    margin-top: 7rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.WelcomeP {
+    text-align: justify;
+    font-size: 2rem;
+    width: 50%;
+    /* margin-left: 1rem; */
+    align-content: space-evenly;
+}
+
+.specialP {
+    color: cadetblue;
+    text-wrap: nowrap;
+}
+
+
+.imagePhoto {
+    width: 200px;
+    border-radius: 3rem;
+}
+
+
