--- a/img/style.css
+++ b/img/style.css
@@ -9,10 +9,25 @@ body {
     justify-content: space-between;
 }
 
+.cvDownload {
+    text-decoration: none;
+    color: #3995f1;
+    font-size: 2.2rem;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0.5rem 0 0 1rem;
+}
+
+.imgDownload {
+    width: 1.4rem;
+    filter: invert(1);
+    color: #10101f;
+}
+
 .titleName {
     text-align: left;
     text-transform: capitalize;
-    color: cadetblue;
+    color: #3995f1;
     font-size: 2.2rem;
     font-family: serif, Arial, Helvetica, sans-serif;
     margin: .5rem 0 0 1rem;
@@ -40,10 +55,10 @@ body {
 }
 
 .menuItem:hover {
-    border-bottom: 1px solid cadetblue;
+    border-bottom: 1px solid #3995f1;
     opacity: 0.7;
     transition: opacity 0.3s ease-in-out;
-    color: cadetblue;
+    color: #3995f1;
     font-weight: bold;
 }
 
@@ -53,7 +68,7 @@ body {
 }
 
 .menuItem a:hover {
-    color: cadetblue;
+    color: #3995f1;
 }
 
 .presentingPortolio {
@@ -71,7 +86,7 @@ body {
 }
 
 .specialP {
-    color: cadetblue;
+    color: #3995f1;
     text-wrap: nowrap;
 }
 
@@ -80,5 +95,3 @@ body {
     width: 200px;
     border-radius: 3rem;
 }
-
-
