--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-body {
-    background: repeating-linear-gradient(45deg, black, #000000a3 75rem);
-    color: whitesmoke;
-}
-
+/* 
 .headerContainer {
     display: flex;
     flex-direction: row;
@@ -48,7 +44,7 @@ body {
 
 .menuItem {
     font-size: 1.2rem;
-    /* margin: 0 10px; */
+    /* margin: 0 10px; 
     margin-right: 1rem;
     padding: 10px;
     color: whitesmoke;
@@ -81,7 +77,7 @@ body {
     text-align: justify;
     font-size: 2rem;
     width: 50%;
-    /* margin-left: 1rem; */
+    /* margin-left: 1rem; 
     align-content: space-evenly;
 }
 
@@ -94,4 +90,50 @@ body {
 .imagePhoto {
     width: 200px;
     border-radius: 3rem;
+} */
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    background: #272c31;
+    color: whitesmoke;
+}
+
+body {
+    background: #272c31 !important;
+    color: whitesmoke;
+}
+
+@media only screen and (min-width: 992px) {
+
+    .nav-link {
+        position: relative;
+
+    }
+
+    .nav-link::after {
+        content: '';
+        opacity: 0;
+        transition: all 0.2s;
+        height: 2px;
+        width: 100%;
+        background-color: greenyellow;
+        position: absolute;
+        bottom: 0;
+        left: 0
+    }
+
+    .nav-link:hover::after {
+        opacity: 1;
+    }
+}
+
+
+.imgPhoto {
+    width: 30%;
+    margin-top: 10%;
+    border-radius: 3%;
 }
