--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,23 @@ body {
 .progettiTextTitle {
     margin-left: 5rem;
 }
+
+.carousel-item img {
+    width: 20rem;
+    height: auto;
+    margin: 10rem auto; /* Centra l'immagine */
+}
+
+.carousel-caption {
+    text-align: center; 
+    margin-top: 1rem; 
+}
+
+.carousel-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
